feat: Initialize backend server and dependencies
This commit sets up the backend server environment, including essential dependencies for API development such as Express, Mongoose, and JWT. It also configures build and development scripts for both frontend and backend, improving the development workflow. Security and logging middleware are integrated, and the database connection logic is prepared.

Key changes include:
- Adding core backend dependencies to `package.json`.
- Implementing development and build scripts for backend and frontend.
- Integrating security middleware (Helmet, CORS) and logging (Morgan).
- Setting up environment variable loading with `dotenv`.
- Ensuring correct `__dirname` resolution in ES module context.
- Updating README with new installation and running instructions.

--- a/package.json
+++ b/package.json
@@ -2,24 +2,41 @@
   "name": "student-registration",
   "version": "1.0.0",
   "scripts": {
+    "start": "node backend/dist/index.js",
     "dev": "vite",
-    "build": "vite build",
+    "dev:backend": "nodemon backend/src/index.ts",
+    "build": "tsc -p backend/tsconfig.json && vite build",
     "preview": "vite preview",
-    "start": "node server.js"
+    "seed": "ts-node backend/src/seed.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.6",
     "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.2.0",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "vite": "^5.0.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "20.x"
   }
 }
