Fix Render build configuration for TypeScript

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2022",
     "module": "es2022",
     "moduleResolution": "node",
+    "types": ["node"],
     "rootDir": "./",
     "outDir": "../dist",
     "esModuleInterop": true,
