--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,9 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["node"],
+    "typeRoots": ["../node_modules/@types", "./node_modules/@types"]
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
