--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,14 +3,14 @@
     "target": "es2022",
     "module": "es2022",
     "moduleResolution": "node",
-    "rootDir": "./",
-    "outDir": "../dist",
+    "rootDir": "./src",
+    "outDir": "./dist",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "typeRoots": ["../node_modules/@types", "./node_modules/@types"]
   },
-  "include": ["./**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
